--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mongodb": "^3.5.5",
 		"mongoose": "^5.9.7",
 		"node": "^13.12.0",
+		"uuid": "^7.0.3",
 		"zombie": "^6.1.4"
 	},
 	"engines": {
